--- a/UntitledFinanceTracker/SettingsAccountTypes.xaml
+++ b/UntitledFinanceTracker/SettingsAccountTypes.xaml
@@ -5,13 +5,36 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:UntitledFinanceTracker"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             Initialized="UserControl_Initialized">
     <Grid>
-        <DataGrid x:Name="dgEntries" AutoGenerateColumns="False" Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="45" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <Border Background="#1A1A1A" Grid.ColumnSpan="2" Margin="10 0 10 10">
+            <TextBlock Style="{StaticResource Title}" Grid.Row="0" Grid.ColumnSpan="2" Margin="5 0 0 0">Account Types</TextBlock>
+        </Border>
+        <Button Style="{StaticResource btnAdd}" x:Name="btnAdd" Click="btnAdd_Click" VerticalAlignment="Stretch">
+            Add Account Type
+        </Button>
+        
+        <DataGrid x:Name="dgAccountTypes" Grid.Row="1">
             <DataGrid.Columns>
-                <!-- Added binding to format date, otherwise date and time would be shown -->
-                <DataGridTextColumn Header="Account Type" Width="122" Binding="{Binding AccountType}"/>
-                </DataGrid.Columns>
+                <DataGridTextColumn Header="ID" Width="40" Binding="{Binding AccountTypeID}" Visibility="Hidden" />
+                <DataGridTextColumn Header="Type" Width="*" Binding="{Binding AccountType}" />
+                <DataGridTemplateColumn Header="Action" HeaderStyle="{StaticResource dgCenter}" Width="60">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <Button Style="{StaticResource btnEditDg}" />
+                                <Button Style="{StaticResource btnDeleteDg}" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
         </DataGrid>
     </Grid>
 </UserControl>
