--- a/UntitledFinanceTracker/SettingsAccounts.xaml
+++ b/UntitledFinanceTracker/SettingsAccounts.xaml
@@ -5,8 +5,42 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:UntitledFinanceTracker"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             Initialized="UserControl_Initialized">
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="45" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <Border Background="#1A1A1A" Grid.ColumnSpan="2" Margin="10 0 10 10">
+            <TextBlock Style="{StaticResource Title}" Grid.Row="0" Grid.ColumnSpan="2" Margin="5 0 0 0">
+                Accounts
+            </TextBlock>
+        </Border>
+        <Button Style="{StaticResource btnAdd}" x:Name="btnAdd" Click="btnAdd_Click" VerticalAlignment="Stretch">
+            Add Account
+        </Button>
+
+        <DataGrid x:Name="dgAccounts" Grid.Row="1">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="ID" Width="40" Binding="{Binding AccountID}" Visibility="Hidden" />
+                <DataGridTextColumn Header="Name" Width="100" Binding="{Binding AccountName}" />
+                <DataGridTextColumn Header="Type" Width="100" Binding="{Binding AccountType}" />
+                <DataGridTextColumn Header="Starting Balance" Width="112" Binding="{Binding StartingBalance, StringFormat=C}"
+                                    CellStyle="{StaticResource dgCellRight}" />
+                <DataGridTextColumn Header="Enabled" Width="*" Binding="{Binding Enabled}" />
+                <DataGridTemplateColumn Header="Action" Width="60" HeaderStyle="{StaticResource dgCenter}">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <Button Style="{StaticResource btnEditDg}" />
+                                <Button Style="{StaticResource btnDeleteDg}" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </UserControl>
