--- a/UntitledFinanceTracker/SettingsCategories.xaml
+++ b/UntitledFinanceTracker/SettingsCategories.xaml
@@ -5,8 +5,41 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:UntitledFinanceTracker"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             Initialized="UserControl_Initialized">
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="45" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <Border Background="#1A1A1A" Grid.ColumnSpan="2" Margin="10 0 10 10">
+            <TextBlock Style="{StaticResource Title}" Grid.Row="0" Grid.ColumnSpan="2" Margin="5 0 0 0">
+                Categories
+            </TextBlock>
+        </Border>
+        <Button Style="{StaticResource btnAdd}" x:Name="btnAdd" Click="btnAdd_Click" VerticalAlignment="Stretch">
+            Add Category
+        </Button>
+        
+        <DataGrid x:Name="dgCategories" Grid.Row="1">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="ID" Width="40" Binding="{Binding CategoryID}" Visibility="Hidden" />
+                <DataGridTextColumn Header="Parent" Width="100" Binding="{Binding Parent}" />
+                <DataGridTextColumn Header="Type" Width="60" Binding="{Binding CategoryType}" />
+                <DataGridTextColumn Header="Name" Width="100" Binding="{Binding CategoryName}" />
+                <DataGridTextColumn Header="Enabled" Width="*" Binding="{Binding Enabled}" />
+                <DataGridTemplateColumn Header="Action" HeaderStyle="{StaticResource dgCenter}" Width="60">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <Button Style="{StaticResource btnEditDg}" />
+                                <Button Style="{StaticResource btnDeleteDg}" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </UserControl>
