--- a/UntitledFinanceTracker/EditTransaction.xaml
+++ b/UntitledFinanceTracker/EditTransaction.xaml
@@ -32,6 +32,7 @@
                 <Label>Amount</Label>
                 <TextBox x:Name="txtAmount"></TextBox>
             </StackPanel>
+            <Button Style="{StaticResource btnCSVFrm}" x:Name="btnCSV" Click="btnCSV_Click" Margin="0 28 0 0">Import CSV</Button>
         </StackPanel>
         <StackPanel Orientation="Vertical" Grid.Column="1">
             <StackPanel Style="{StaticResource spForm}">
