--- a/UntitledFinanceTracker/EditTransaction.xaml
+++ b/UntitledFinanceTracker/EditTransaction.xaml
@@ -32,7 +32,8 @@
                 <Label>Amount</Label>
                 <TextBox x:Name="txtAmount"></TextBox>
             </StackPanel>
-            <Button Style="{StaticResource btnCSVFrm}" x:Name="btnCSV" Click="btnCSV_Click" Margin="0 28 0 0">Import CSV</Button>
+            <Button Style="{StaticResource btnCSVFrm}" x:Name="btnCSV" Click="btnCSV_Click"
+                    Margin="0 28 0 0" Visibility="Hidden">Import CSV</Button>
         </StackPanel>
         <StackPanel Orientation="Vertical" Grid.Column="1">
             <StackPanel Style="{StaticResource spForm}">
@@ -50,7 +51,7 @@
                 <TextBox x:Name="txtPayee"></TextBox>
             </StackPanel>
             <StackPanel Style="{StaticResource spForm}" Orientation="Horizontal" Margin="0 18 0 0">
-                <Button Style="{StaticResource btnUpdateFrm}" x:Name="btnUpdate" Click="BtnUpdate_Click">Update</Button>
+                <Button Style="{StaticResource btnUpdateFrm}" x:Name="btnEdit" Click="btnEdit_Click">Update</Button>
                 <Button Style="{StaticResource btnCancelFrm}" x:Name="btnCancel" Click="btnCancel_Click" >Cancel</Button>
             </StackPanel>
         </StackPanel>
