--- a/UntitledFinanceTracker/Settings/SettingsAccountTypes.xaml
+++ b/UntitledFinanceTracker/Settings/SettingsAccountTypes.xaml
@@ -19,8 +19,8 @@
         <Button Style="{StaticResource btnAdd}" x:Name="btnAdd" Click="btnAdd_Click" VerticalAlignment="Stretch">
             Add Account Type
         </Button>
-        
-        <DataGrid x:Name="dgAccountTypes" Grid.Row="1">
+
+        <DataGrid x:Name="dgAccountTypes" Grid.Row="1" ItemsSource="{Binding AccountTypes}">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID" Width="40" Binding="{Binding AccountTypeID}" Visibility="Hidden" />
                 <DataGridTextColumn Header="Type" Width="*" Binding="{Binding AccountTypeName}" />
@@ -28,8 +28,8 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
-                                <Button Style="{StaticResource btnEditDg}" />
-                                <Button Style="{StaticResource btnDeleteDg}" />
+                                <Button x:Name="btnEdit" Style="{StaticResource btnEditDg}" Click="btnEdit_Click" />
+                                <Button x:Name="btnDelete" Style="{StaticResource btnDeleteDg}" Click="btnDelete_Click" />
                             </StackPanel>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
