--- a/UntitledFinanceTracker/App.xaml
+++ b/UntitledFinanceTracker/App.xaml
@@ -62,6 +62,21 @@
             </Style.Triggers>
         </Style>
 
+        <!-- Menu item formatting -->
+        <Style x:Key="SettingsMenuItem" TargetType="{x:Type ListViewItem}" BasedOn="{StaticResource MenuItem}">
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#121212" />
+                    <Setter Property="Foreground" Value="#A8EAF7" />
+                </Trigger>
+                <Trigger Property="IsMouseOver" Value="False">
+                    <Setter Property="Background" Value="#212121" />
+                    <Setter Property="Foreground" Value="#ffffff" />
+                </Trigger>
+                
+            </Style.Triggers>
+        </Style>
+
         <Style x:Key="btnBase" TargetType="Button">
             <Style.Resources>
             <Style TargetType="Border">
@@ -80,6 +95,21 @@
             <Setter Property="VerticalAlignment" Value="Top" />
             <Setter Property="HorizontalAlignment" Value="Right" />
             <Setter Property="FontFamily" Value="Microsoft JhengHei Light" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}">
+                            <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center" />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#3ab6ce" />
+                    <Setter Property="Foreground" Value="#cbf7ff" />
+                </Trigger>
+            </Style.Triggers>
         </Style>
 
         <!-- Datagrid parent button formatting -->
@@ -217,8 +247,8 @@
             </Style.Resources>
             <Setter Property="Width" Value="180" />
             <Setter Property="Height" Value="30" />
-            <Setter Property="BorderBrush" Value="#404040" />
             <Setter Property="BorderThickness" Value="1" />
+            <Setter Property="BorderBrush" Value="#404040" />
             <Setter Property="Foreground" Value="#ffffff" />
             <Setter Property="Background" Value="#303030" />
             <Setter Property="VerticalContentAlignment" Value="Center" />
@@ -233,11 +263,11 @@
             <Setter Property="HeadersVisibility" Value="Column" />
             <Setter Property="GridLinesVisibility" Value="None" />
             <Setter Property="IsReadOnly" Value="True" />
-            <Setter Property="CanUserAddRows" Value="false" />
-            <Setter Property="CanUserDeleteRows" Value="false" />
-            <Setter Property="CanUserResizeRows" Value="false" />
-            <Setter Property="CanUserSortColumns" Value="True" />
-            <Setter Property="AutoGenerateColumns" Value="false" />
+            <Setter Property="CanUserAddRows" Value="False" />
+            <Setter Property="CanUserDeleteRows" Value="False" />
+            <Setter Property="CanUserResizeRows" Value="False" />
+            <Setter Property="CanUserSortColumns" Value="False" />
+            <Setter Property="AutoGenerateColumns" Value="False" />
             <Setter Property="Background" Value="#212121" />
             <Setter Property="Foreground" Value="#ffffff" />
             <Setter Property="RowBackground" Value="#212121" />
@@ -245,6 +275,11 @@
         </Style>
         <!-- centered column header formatting -->
         <Style x:Key="dgCenter" TargetType="{x:Type DataGridColumnHeader}">
+            <Setter Property="Height" Value="30" />
+            <Setter Property="FontSize" Value="12" />
+            <Setter Property="FontWeight" Value="Bold" />
+            <Setter Property="BorderThickness" Value="0" />
+            <Setter Property="Background" Value="#1A1A1A" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type DataGridColumnHeader}">
@@ -257,16 +292,23 @@
         </Style>
         <!-- left aligned column header formatting -->
         <Style TargetType="{x:Type DataGridColumnHeader}" BasedOn="{StaticResource dgCenter}">
-            <Setter Property="Height" Value="30" />
-            <Setter Property="FontSize" Value="12" />
-            <Setter Property="FontWeight" Value="Bold" />
-            <Setter Property="BorderThickness" Value="0" />
-            <Setter Property="Background" Value="#1A1A1A" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type DataGridColumnHeader}">
                         <Grid Background="{TemplateBinding Background}" Margin="5 0 0 0">
                             <TextBlock FontFamily="Microsoft JhengHei" Text="{TemplateBinding Content}" VerticalAlignment="Center" />
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <!-- right aligned column header formatting -->
+        <Style x:Key="dgRight" TargetType="{x:Type DataGridColumnHeader}" BasedOn="{StaticResource dgCenter}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type DataGridColumnHeader}">
+                        <Grid Background="{TemplateBinding Background}" Margin="0 0 10 0">
+                            <TextBlock FontFamily="Microsoft JhengHei" Text="{TemplateBinding Content}" VerticalAlignment="Center" HorizontalAlignment="Right" />
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
